--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
         <label for="slide-3-trigger">Slide Three</label>
         <label for="slide-4-trigger">Slide Four</label>
        <label for="slide-5-trigger">Slide Five</label>
+       <label for="slide-6-trigger">Slide One</label>
+        <label for="slide-7-trigger">Slide Two</label>
+        <label for="slide-8-trigger">Slide Three</label>
+        <label for="slide-9-trigger">Slide Four</label>
+       <label for="slide-10-trigger">Slide Five</label>
     </header>
 
     <input id="slide-1-trigger" type="radio" name="slides" checked>
