--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
 
 <div class="wrap">
     <header>
-        <label for="slide-1-trigger">Slide One</label>
-        <label for="slide-2-trigger">Slide Two</label>
-        <label for="slide-3-trigger">Slide Three</label>
-        <label for="slide-4-trigger">Slide Four</label>
-       <label for="slide-5-trigger">Slide Five</label>
-       <label for="slide-6-trigger">Slide One</label>
-        <label for="slide-7-trigger">Slide Two</label>
-        <label for="slide-8-trigger">Slide Three</label>
-        <label for="slide-9-trigger">Slide Four</label>
-       <label for="slide-10-trigger">Slide Five</label>
+        <label for="slide-1-trigger">Első</label>
+        <label for="slide-2-trigger">Második</label>
+        <label for="slide-3-trigger">Harmadik</label>
+        <label for="slide-4-trigger">Negyedik</label>
+       <label for="slide-5-trigger">Ötödik</label>
+       <label for="slide-6-trigger">Hatodik</label>
+        <label for="slide-7-trigger">Hetedik</label>
+        <label for="slide-8-trigger">Nyolcadik</label>
+        <label for="slide-9-trigger">Kilencedik</label>
+       <label for="slide-10-trigger">Tizedik</label>
     </header>
 
     <input id="slide-1-trigger" type="radio" name="slides" checked>
