--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="SZSZ : ">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/egy.css">
 <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
@@ -12,7 +11,7 @@
 <script src="javascripts/main.js"></script>
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>SVO</title>
+    <title>Sz sz by kb</title>
   </head>
 
   <body>
