--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </section>
     <input id="slide-2-trigger" type="radio" name="slides">
   <section class="slide slide-two">
-    
+     <h1>Penyige</h1>
 <div class="wrapper2">
   <img src="http://safru.hu/pictures/kinalat_gyongyos/nemtudom-szilva-xx.jpg" alt="" class="screenshot" />
   <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/26/HUN_Penyige_COA.jpg/800px-HUN_Penyige_COA.jpg" alt="" class="screenshot" />
