--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <h4>Szatmári Szilvalekvár</h4>
     <div class="whitebox">
       <div class="white">
-        <h3>Készítette: K B</h3>
+        <h3>Készítette: Kiss Barbara</h3>
       </div>
     </div>
 </div>
