--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <script src="javascripts/main.js"></script>
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Sz sz by kb</title>
+    <title>K.B - Szatmári Szilvalekvár</title>
   </head>
 
   <body>
