--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <script src="javascripts/main.js"></script>
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>K.B - Szatmári Szilvalekvár</title>
+    <title>Sz sz by kb</title>
   </head>
 
   <body>
@@ -186,7 +186,7 @@
         </li>
     </ol></span>
     
-  <div style="position:fixed;bottom:0px;right:10px;">  <iframe width="560" height="315" src="https://www.youtube.com/embed/ctNsY2ZSl24" frameborder="0" allowfullscreen></iframe></div>
+  <div class="szszvideo">  <iframe width="560" height="315" src="https://www.youtube.com/embed/ctNsY2ZSl24" frameborder="0" allowfullscreen></iframe></div>
 
     </section>
     <input id="slide-8-trigger" type="radio" name="slides">
