--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@ süteményekhez (pl. bukta)      </section>
     <section class="slide slide-three">
         <h1> Források </h1>
 
-      <span style="font-size:30px;text-align:justify;"><li>http://www.geocaching.hu/</li> <br><li>http://szatmartour.hu/</li> <br><li>http://www.tarpa.eu</li> <br><li></li> <br><li>http://www.origo.hu</li> <br><li>http://fruitdebereg.hu</li> <br><li>http://wikipedia.org</li> </span>
+      <span style="font-size:30px;text-align:justify;"><li>http://www.geocaching.hu/</li> <br><li>http://szatmartour.hu/</li> <br><li>http://www.tarpa.eu</li> <br><li>http://www.origo.hu</li> <br><li>http://fruitdebereg.hu</li> <br><li>http://wikipedia.org</li> </span>
       
     </section>
 
