--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <body>
 
-    <link href='http://fonts.googleapis.com/css?family=Montserrat|Permanent+Marker|Inconsolata|Ubuntu|BenchNine|Rochester|Righteous|Lobster|Raleway|Courgette|Comfortaa|Cinzel+Decorative|Mr+De+Haviland|Engagement|Roboto|Patrick+Hand|Advent+Pro|Abril+Fatface|Fredoka+One' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Inconsolata|Courgette|Comfortaa|Cinzel+Decorative|Engagement|Roboto|Patrick+Hand|Advent+Pro|Abril+Fatface|Fredoka+One' rel='stylesheet' type='text/css'>
 
 
 
@@ -307,7 +307,7 @@ süteményekhez (pl. bukta)      </section>
 
    <input id="slide-13-trigger" type="radio" name="slides">
     <section class="slide slide-three">
-        <h1> Vége :)</h1>
+      <h1 style="margin-top:20%"> Vége :)</h1>
 
      
     </section>
