--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
         <span>4</span>
       </section>
       <section class='right'>
- <span style="font-size:30px;text-align:justify;">Illata kellemes, íze zamatos, a gyümölcsfajtára jellemző, intenzív.</span>       </section>
+ <span style="font-size:30px;text-align:justify;">Illata kellemes, íze zamatos, intenzív.</span>       </section>
           </article>
      
   
