--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     </article>
     <article>
       
-      <section class='right' style='font-size:27px;'><li style="text-indent:300px"> a kemencében sült kapros- túrós lángost,</li> <li style="text-indent:300px"><span class="hili">penyigei kötött tészta leves<span><img src="http://www.kisar.hu/images/portfolio/full/kototteszta_leves.png" width="350"></span></span>t ,</li> <li style="text-indent:300px">tengerivel töltött káposztát,<li style="text-indent:300px"> <span class="hili">rongyoslapókát<span><img src="http://1.bp.blogspot.com/_TEhaDIkM76k/S7GwvjCPb_I/AAAAAAAAB04/bjavojwqoTw/s400/P1010841.JPG"></span></span>.
+      <section class='right' style='font-size:27px;'><li style="text-indent:300px"> a kemencében sült kapros- túrós lángost,</li> <li style="text-indent:300px"><span class="hili">penyigei kötött tészta leves<span><img src="http://www.kisar.hu/images/portfolio/full/kototteszta_leves.png" width="450"></span></span>t ,</li> <li style="text-indent:300px">tengerivel töltött káposztát,<li style="text-indent:300px"> <span class="hili">rongyoslapókát<span><img src="http://1.bp.blogspot.com/_TEhaDIkM76k/S7GwvjCPb_I/AAAAAAAAB04/bjavojwqoTw/s400/P1010841.JPG"></span></span>.
       </section>
     </article>
     <article>
@@ -307,8 +307,7 @@
 
    <input id="slide-13-trigger" type="radio" name="slides">
     <section class="slide slide-three">
-      <h1 style="margin-top:20%"> Vége :)</h1>
-
+      <h1 style="margin-top:20%"> Köszönöm a figyelmet! :)
      
     </section>
  
