--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
     </section></td><td><img src="http://i.imgur.com/RWQLUWb.png" style="width:620px;margin-left:-160px;margin-top:45px"/></td></table>
 
   <br> <img src="http://www.pecatavak.hu/H_Images/328/Szenke_to_Penyige_04.JPG">
+  
     </section>
     <input id="slide-3-trigger" type="radio" name="slides">
     <section class="slide slide-four ">
@@ -172,15 +173,14 @@
     
         <h1>Lekvárkészítés</h1><span style="font-size:30px;text-align:justify;">
  <ol style="text-align:left">
-			<li>Az érett gyümölcsöt botokkal verik le a fa alá terített ponyvára, és onnan szedik kosarakba.</li><br>
-			<li>Fateknőben többször átmossák, az egészséges szemeket szűrőn lecsöpögtetik, majd kezdetét veszi a ciberekészítés.
-</li><br>
-			<li>Az első feladat a katlan megrakása, az üst tapasztása. A katlan megrakásához vályogot és pelyvás sarat használnak. A katlant mindig az üst méretének megfelelő nagyságúra rakják, kívül-belül kitapasztják, hátul lyukat hagynak rajta a füstkivezetőnek.</li><br>
-			<li>Az üst előkészítése annak külső felületének sárral való betapasztásából áll. A kitapasztott üstöt behelyezik a katlanba, vízszintbe állítják, a peremnél betapasztják, majd tisztára törlik.
+<li>Fateknőben többször átmossák, az egészséges szemeket szűrőn lecsöpögtetik, majd kezdetét veszi a ciberekészítés.</li><br>
+<li>Az első feladat a katlan megrakása, az üst előkészítése. A katlan megrakásához vályogot és sarat használnak.</li><br>
+<li>Az üst előkészítése annak külső felületének sárral való betapasztásából áll. A kitapasztott üstöt behelyezik a katlanba, vízszintbe állítják, a peremnél betapasztják, majd tisztára törlik.
 </li>
         <br>
-        <li>A szilvát az üstben puhára főzik, hogy könnyen leváljon a magjáról, forrón átdörzsölik egy rostán, amelyben a mag és a héj fennmarad. A forró ciberét a katlanba épített rézüstbe töltik. A katlanban már ég a tűz, több (akár 10-20!) órán keresztül kell főzni, <u>állandóan kavargatva</u>, hogy le ne égjen. A szilvalekvár akkor készül el, ha már olyan sűrű, hogy nem esik le a kanálról. </li><br>
-			<li>A lekvár akkor van kész, ha a púposan megmerített fakanálról nem csöppen le.</li>
+        <li>A szilvát az üstben puhára főzik, hogy könnyen leváljon a magjáról, forrón átdörzsölik egy rostán, amelyben a mag és a héj fennmarad. A forró ciberét a katlanba épített rézüstbe töltik. </li><br>
+        <li>Több (akár 10-20!) órán keresztül kell főzni, <u>állandóan kavargatva</u>, hogy le ne égjen. </li><br>
+	<li>A lekvár akkor van kész, ha a púposan megmerített fakanálról nem csöppen le.</li>
         <br>
         <li>A kihűlt lekvárt szilkékbe rakják. A lekvár évekig tárolható.
         </li>
