--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <section class="slide slide-four">
         <h1>Nemtudom &nbsp; szilva</h1><span style="font-size:30px;text-align:justify;">
      <img src="http://safru.hu/pictures/kinalat_gyongyos/nemtudom-szilva-xx.jpg" style="float:left;padding-right:10px">
-      <li>A településen szinte nincs olyan kert, ahol legalább néhány fa ne lenne. </li><br><li>Augusztus végefelé/Szeptember elején érik.</li><br> <li>Apró szemű, gömbölyű alakú, hamvas, nem magvaváló.</li>    <br> <li> Húsa világossárga, nagyon édes, aromás.</li> <img src="http://www.mixonline.hu/System/Articles/Images/4f50992b-dd23-496d-9627-142177205e47.jpg" style="float:right;padding-left:10px;width:350px"><br> <li>Semmilyen gondozást nem igényel. <br>Sem metszeni, sem  permetezni nem szokták.</li>     <br>
+      <li>Apró szemű, gömbölyű alakú, hamvas, nem magvaváló.</li>    <br> <li> Húsa világossárga, nagyon édes, aromás.</li> <img src="http://www.mixonline.hu/System/Articles/Images/4f50992b-dd23-496d-9627-142177205e47.jpg" style="float:right;padding-left:10px;width:350px"><br> <li>Semmilyen gondozást nem igényel. <br>Sem metszeni, sem  permetezni nem szokták.</li>     <br>
       <li>A gazdák még csak műtrágyázást sem alkalmaznak.</li><br><li>Mindössze arra kell figyelni, hogy az ágai gyakran nem bírják el a bőséges termést.</li> 
   
  
